# quantum-drug-discovery

./: .gitignore  .pre-commit-config.yaml  CURSOR_PROJECT_CONTEXT.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: campaigns.py  main.py  provenance.py  schemas.py
backend/tests/: test_campaigns.py  test_health.py
benchmarks/: README.md  pyproject.toml
benchmarks/authorization/: authorization_bundle.json
benchmarks/fixtures/: LICENSE.md  clusters_v1.tsv  pdbbind_peptide_affinity_v1.tsv  skempi_ddg_v1.tsv
benchmarks/fixtures/structures/: README.md  oracle_validity_last_run.json  structure_manifest_v1.tsv
benchmarks/peptide_affinity/: README.md  __init__.py  audit.py  load.py  models.py  prep.py  splits.py
benchmarks/peptide_affinity/data/: attrition_audit.json  candidate_pdb_ids.txt  decomposition_traindev.json  elec_sweep_traindev.json  elec_sweep_traindev_v3.json  entropy_waters_ab_traindev.json  oracle_validity_v2_last_run.json  oracle_validity_v3_oneshot_test.json  pepbench_rcsb_map_v3.json  peptide_affinity_catalog_v2.tsv  peptide_affinity_catalog_v3.tsv  peptide_affinity_prepared_v2.tsv  protocol_sweep_traindev.json  splits_v2.json  splits_v3.json  splits_v4.json
benchmarks/peptide_affinity/fixtures/: peptide_affinity_ci_v1.tsv
benchmarks/peptide_affinity/scripts/: expand_catalog_v3.py  map_pepbench_to_rcsb.py  match_and_build_catalog.py
benchmarks/peptideforge_benchmarks/: __init__.py  models.py  paths.py  pdbbind.py  py.typed  skempi.py  splits.py
benchmarks/reports/: README.md  benchmark_report.json  benchmark_report.md
benchmarks/reports/artifacts/: acquisition_branin_currin_last_run.json  loop_spend_gate_last_run.json  surrogate_acceptance_last_run.json
benchmarks/reports/artifacts/loop_runs/: qnehvi_dataset.json  random_dataset.json
benchmarks/scripts/: prepare_interfaces_from_full.py  prepare_structure_fixtures.py
benchmarks/skempi/: README.md  curate_v2.py  fold_quality.py  power.py  predict_folds.py  run_fold_degradation.py  run_skempi_ddg.py  run_step4.sh  skempi_chains.py  stratify.py
benchmarks/skempi/data/: fold_degradation_last_run.json  fold_stratify_last_run.json  skempi_ddg_last_run.json  skempi_ddg_powered_last_run.json  skempi_powered_holdout_v1.json  skempi_v2.tsv
benchmarks/skempi/data/predicted_folds/: predicted_folds_manifest.json
benchmarks/tests/: __init__.py  test_loaders.py  test_peptide_affinity.py  test_prep.py
core/: README.md  pyproject.toml
core/src/peptideforge/: __init__.py  authorization.py  authorization_build.py  claims.py
core/src/peptideforge/acquisition/: __init__.py  branin_currin.py  hypervolume.py  qnehvi.py  random_acq.py  utils.py  validate.py
core/src/peptideforge/agent/: __init__.py  gates.py  llm.py  orchestrator.py  tools.py  trace.py
core/src/peptideforge/contracts/: __init__.py  export_schemas.py  models.py  protocols.py
core/src/peptideforge/developability/: __init__.py  aggregation.py  amino_acids.py  base.py  half_life.py  immunogenicity.py  multi.py  solubility.py  synthesizability.py
core/src/peptideforge/eval/: ACCEPTANCE.md  __init__.py  affinity_validity.py  harness.py  metrics.py  redteam.py
core/src/peptideforge/generators/: __init__.py  composite.py  deps.py  esm2.py  filters.py  mutation.py
core/tests/: test_authorization.py
core/tests/acquisition/: __init__.py  test_acquisition.py
core/tests/agent/: test_agent.py
core/tests/contracts/: test_models.py  test_schemas.py
core/tests/developability/: test_predictors.py
core/tests/eval/: __init__.py  test_affinity_validity_ci.py  test_harness_redteam.py
core/tests/generators/: __init__.py  test_generators.py
core/tests/loop/: __init__.py  test_loop.py
core/tests/oracles/: test_costs.py  test_openmm_oracle.py  test_oracle_validity.py  test_qchem.py
core/tests/reports/: test_report.py
core/tests/structure/: __init__.py  test_structure.py
core/tests/surrogate/: __init__.py  test_surrogate.py
docs/: README.md
(+80 files in other folders)
