[tool.poetry]
name = "peptideforge"
version = "0.1.0"
description = "Physics-grounded, agentic, closed-loop peptide design platform"
authors = ["PeptideForge Contributors"]
readme = "README.md"
packages = [{ include = "peptideforge", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
typing-extensions = "^4.12.0"
peptideforge-benchmarks = { path = "../benchmarks", develop = true }
openmm = { version = "^8.1.0", optional = true }
mlflow = { version = "^2.13.0", optional = true }
pyscf = { version = "^2.4.0", optional = true }
pennylane = { version = "^0.36.0", optional = true }
fair-esm = { version = "^2.0.0", optional = true }
torch = { version = "^2.2.0", optional = true }

[tool.poetry.extras]
openmm = ["openmm"]
mlflow = ["mlflow"]
qchem = ["pyscf", "pennylane"]
physics = ["openmm", "mlflow", "pyscf", "pennylane"]
esm2 = ["fair-esm", "torch"]
generation = ["fair-esm", "torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.4.0"
black = "^24.4.0"
types-setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["peptideforge"]

[[tool.mypy.overrides]]
module = [
    "openmm",
    "openmm.*",
    "mlflow",
    "mlflow.*",
    "peptideforge_benchmarks",
    "peptideforge_benchmarks.*",
    "pyscf",
    "pyscf.*",
    "pennylane",
    "pennylane.*",
    "esm",
    "esm.*",
    "torch",
    "torch.*",
    "ray",
    "ray.*",
    "openai",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "contract: contract shape validation tests",
    "eval: oracle-validity / red-team harness tests",
    "golden: physics golden / reference tests",
    "slow: slow or GPU-heavy tests",
]
